tests/tooling/fixtures/native/execution/positive/switch_nested_loop_break.objc3
module SwitchNestedLoopBreakExec;

fn main() -> i32 {
  let sum = 0;
  for (let i = 0; i < 4; i = i + 1) {
    switch (i) {
      case 1:
        continue;
      case 2:
        break;
      default:
        sum = sum + 10;
        break;
    }
    sum = sum + 1;
  }
  return sum;
}
