tests/tooling/fixtures/native/execution/negative/misplaced_qualifier_after_params_pure_fn_extern.objc3
module MisplacedQualifierAfterParamsPureFnExtern;

pure fn add(lhs: i32, rhs: i32) extern;

fn main() -> i32 {
  return 0;
}
